--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-  "name": "highcharts-export-clientside",
-  "main": "highcharts-export-clientside.js",
+  "name": "highcharts-client-export",
+  "main": "highcharts-client-exportjs",
   "version": "1.1.4",
-  "homepage": "http://a----.github.io/highcharts-export-clientside/",
+  "homepage": "https://peoplemetrics.github.io/highcharts-client-export/",
   "authors": [
-    "A---- <A----@users.noreply.github.com>"
+    "A---- <A----@users.noreply.github.com>",
+    "Bryan Grimes <bryangrimes@users.noreply.github.com>"
   ],
   "description": "Module for Highcharts to export charts client-side",
   "moduleType": [
